[gd_scene load_steps=8 format=3 uid="uid://cim0smeqjobbv"]

[ext_resource type="Script" path="res://src/guard/Guard.gd" id="1_ck1ss"]
[ext_resource type="PackedScene" uid="uid://b32d6c4y8p1vt" path="res://assets/models/guardbot.glb" id="1_onnlx"]
[ext_resource type="PackedScene" uid="uid://c6jtsxrdsu121" path="res://src/ui/TempLabel.tscn" id="2_w70b2"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_x60ma"]
points = PackedVector3Array(-1, -1, -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, -1, 1, 1, 1, -1, -1, -1, -1, 1, -1, 1, -1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_nnu8v"]
points = PackedVector3Array(3.04652, 1, -0.801164, 2.90683, 0.985931, -0.888611, 3.04652, 1, 0.799588, 3.34239, -1, -0.300405, 3.24222, -1, 0.598543, 2.90845, -0.987889, 0.887749, -2.61925, 0.986508, 0.887749, 2.90845, 0.986508, 0.887749, -2.61763, 0.985931, -0.888611, -2.61925, -0.987889, 0.887749, -2.75732, 1, 0.799588, -2.61763, -0.987312, -0.888611, 2.90683, -0.987312, -0.888611, -2.75332, -1, 0.798483, 3.04252, -1, -0.80006, -2.75332, -1, -0.80006, -2.95731, 1, -0.600948, 3.24651, 1, -0.600948, -3.05761, 1, 0.299242, -2.95303, -1, -0.60012, 3.24651, 1, 0.599371, -3.05319, -1, 0.298829, -3.05319, -1, -0.300405, 3.34681, 1, 0.299242, 3.34681, 1, -0.300819, -3.05761, 1, -0.300819, -2.31965, -0.986545, 0.985164, 2.59507, -0.981031, -0.981031, 3.04252, -1, 0.798483, -2.31965, 0.985164, 0.985164, -2.31688, 0.984056, -0.985437, 2.59849, 0.981018, 0.981018, -2.31688, -0.985437, -0.985437, 2.59507, 0.97965, -0.981031, 3.24222, -1, -0.60012, -2.95731, 1, 0.599371, 2.59849, -0.982399, 0.981018, -2.95303, -1, 0.598543, 3.34239, -1, 0.298829, -2.75732, 1, -0.801164)

[sub_resource type="BoxShape3D" id="BoxShape3D_rqbxe"]
size = Vector3(13.7467, 2, 10.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_shpph"]
size = Vector3(2.24902, 2, 2.56845)

[node name="GuardBot" instance=ExtResource("1_onnlx")]
script = ExtResource("1_ck1ss")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="." index="1"]
transform = Transform3D(0.189924, 0, 0, 0, 0.422995, 0, 0, 0, 0.305652, 0, 0.515424, 0)
shape = SubResource("ConvexPolygonShape3D_x60ma")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="3"]
transform = Transform3D(0.193861, 0, 0, 0, 0, -0.190199, 0, 0.444532, 0, 0, -0.338151, 0)
shape = SubResource("ConvexPolygonShape3D_nnu8v")

[node name="SpotLight3D" type="SpotLight3D" parent="." index="8"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.367161, 0.680314, 0.678051)
light_color = Color(1, 0.933333, 0.396078, 1)
light_energy = 15.0
light_indirect_energy = 1.75
spot_range = 17.0

[node name="SightArea" type="Area3D" parent="." index="9"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="SightArea" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.90976, 0, 0.528774)
shape = SubResource("BoxShape3D_rqbxe")

[node name="CatchArea" type="Area3D" parent="." index="10"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CatchArea" index="0"]
shape = SubResource("BoxShape3D_shpph")

[node name="AlertCooldown" type="Timer" parent="." index="11"]
one_shot = true

[node name="SearchCooldown" type="Timer" parent="." index="12"]
one_shot = true

[node name="TempLabel" parent="." index="13" instance=ExtResource("2_w70b2")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.91345, 0)

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." index="14"]
target_desired_distance = 2.5
avoidance_enabled = true
